Add manifest system with multi-format install and index generation
Introduce a manifest (manifest.json) to track session metadata and
support multiple output formats in the install flow. The SessionEnd
hook now renders transcripts in all configured formats, upserts into
the manifest, and the post-commit hook regenerates a static index page
before committing.

- Add core.ManifestEntry type and manifest package with atomic read/write
- Add `cg manifest upsert` and `cg index` commands
- Refactor install Config.Format string to Config.Formats []string
- Update RenderIndex to accept []ManifestEntry instead of []*Transcript
- Add 005-manifest-repair.md design spec for planned repair command

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Binaries
 chitragupt
-cg
 html_render
 *.exe
 *.dll
@@ -9,7 +8,7 @@ html_render
 
 # Build output
 dist/
-bin/
+.bin/
 
 # Test
 *.test
@@ -26,3 +25,4 @@ coverage.txt
 # OS
 .DS_Store
 Thumbs.db
+.transcripts/
