--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,543 @@
 {
   "entries": [
     {
+      "session_id": "b57f1767-490c-4b6e-89b4-ddd62d1b854a",
+      "title": "Look for any secrets or pii or sensitive information in @.transcripts/",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-16T05:21:30.78Z",
+      "updated_at": "2026-02-16T05:39:45.367Z",
+      "usage": {
+        "input_tokens": 58,
+        "output_tokens": 521,
+        "cache_read_tokens": 1768434,
+        "cache_creation_tokens": 93002
+      },
+      "diff_stats": {
+        "added": 66,
+        "removed": 23,
+        "changed": 2
+      },
+      "message_count": 49,
+      "href": "b57f1767-490c-4b6e-89b4-ddd62d1b854a/index.html"
+    },
+    {
+      "session_id": "5d956696-ab7f-455b-a450-e746cd65aa03",
+      "title": "## Context\n\n- Current git status: On branch main\nYour branch is ahead of...",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-16T05:06:24.747Z",
+      "updated_at": "2026-02-16T05:06:32.716Z",
+      "usage": {
+        "input_tokens": 2,
+        "output_tokens": 263,
+        "cache_read_tokens": 25186,
+        "cache_creation_tokens": 4721
+      },
+      "message_count": 2,
+      "href": "5d956696-ab7f-455b-a450-e746cd65aa03/index.html"
+    },
+    {
       "session_id": "2df198c7-c2fc-4724-91c1-cacb397d1f07",
       "agent": "claude",
       "author": "Ravi Atluri",
       "model": "claude-opus-4-6",
       "created_at": "2026-02-16T04:42:48.211Z",
-      "updated_at": "2026-02-16T04:45:28.859Z",
+      "updated_at": "2026-02-16T05:04:40.342Z",
       "usage": {
-        "input_tokens": 16,
-        "output_tokens": 538,
-        "cache_read_tokens": 440612,
-        "cache_creation_tokens": 43164
+        "input_tokens": 35,
+        "output_tokens": 2378,
+        "cache_read_tokens": 1174826,
+        "cache_creation_tokens": 66130
       },
       "diff_stats": {
-        "added": 17,
+        "added": 43,
+        "removed": 33,
+        "changed": 3
+      },
+      "message_count": 30,
+      "href": "2df198c7-c2fc-4724-91c1-cacb397d1f07/index.html"
+    },
+    {
+      "session_id": "fff0c44a-ed34-4b18-b85f-7bfa4a1498de",
+      "title": "drop agent from transcripts folder path. Keep it flat",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-16T04:08:01.237Z",
+      "updated_at": "2026-02-16T04:09:34.247Z",
+      "usage": {
+        "input_tokens": 18,
+        "output_tokens": 166,
+        "cache_read_tokens": 460791,
+        "cache_creation_tokens": 18854
+      },
+      "diff_stats": {
+        "added": 27,
+        "removed": 34,
+        "changed": 2
+      },
+      "message_count": 13,
+      "href": "fff0c44a-ed34-4b18-b85f-7bfa4a1498de/index.html"
+    },
+    {
+      "session_id": "c7a19e4f-4177-4da2-a8b4-850eb71093fc",
+      "title": "Extend this to handling all xml tags but do it only while rendering",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-15T11:46:57.439Z",
+      "updated_at": "2026-02-15T12:43:37.238Z",
+      "usage": {
+        "input_tokens": 43,
+        "output_tokens": 505,
+        "cache_read_tokens": 2123533,
+        "cache_creation_tokens": 67043
+      },
+      "diff_stats": {
+        "added": 211,
+        "removed": 44,
+        "changed": 6
+      },
+      "message_count": 37,
+      "href": "c7a19e4f-4177-4da2-a8b4-850eb71093fc/index.html"
+    },
+    {
+      "session_id": "3cc4c00f-bf4d-4466-a81d-ea40cd084be2",
+      "title": "a user might generate multiple sessions during a commit. How to maintain and...",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-15T11:28:15.563Z",
+      "updated_at": "2026-02-16T04:37:33.1Z",
+      "usage": {
+        "input_tokens": 95,
+        "output_tokens": 1042,
+        "cache_read_tokens": 6494201,
+        "cache_creation_tokens": 362814
+      },
+      "diff_stats": {
+        "added": 1443,
+        "removed": 147,
+        "changed": 14
+      },
+      "message_count": 83,
+      "href": "3cc4c00f-bf4d-4466-a81d-ea40cd084be2/index.html"
+    },
+    {
+      "session_id": "52cde7cb-0210-4c13-b3dc-8134acc62d0f",
+      "title": "Review why tool results are showing as user...",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-14T10:48:07.624Z",
+      "updated_at": "2026-02-14T12:29:36.852Z",
+      "usage": {
+        "input_tokens": 75,
+        "output_tokens": 767,
+        "cache_read_tokens": 5009250,
+        "cache_creation_tokens": 207781
+      },
+      "diff_stats": {
+        "added": 467,
+        "removed": 127,
+        "changed": 5
+      },
+      "message_count": 64,
+      "href": "52cde7cb-0210-4c13-b3dc-8134acc62d0f/index.html"
+    },
+    {
+      "session_id": "7d71935c-3ed2-4af5-a115-6a5a714b67a1",
+      "title": "Figure out the implementation for serve\nIt should support only project and all...",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-14T09:33:52.843Z",
+      "updated_at": "2026-02-14T10:59:29.211Z",
+      "usage": {
+        "input_tokens": 65,
+        "output_tokens": 573,
+        "cache_read_tokens": 3681046,
+        "cache_creation_tokens": 181607
+      },
+      "diff_stats": {
+        "added": 1760,
+        "removed": 73,
+        "changed": 7
+      },
+      "message_count": 50,
+      "href": "7d71935c-3ed2-4af5-a115-6a5a714b67a1/index.html"
+    },
+    {
+      "session_id": "e0c87bd6-2296-4d32-a3c5-dd1dd6ece790",
+      "title": "\u003cide_selection\u003eThe user selected the lines 41 to 45 from...",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-14T08:04:20.383Z",
+      "updated_at": "2026-02-14T09:19:54.772Z",
+      "usage": {
+        "input_tokens": 59,
+        "output_tokens": 740,
+        "cache_read_tokens": 2342765,
+        "cache_creation_tokens": 81525
+      },
+      "diff_stats": {
+        "added": 245,
+        "removed": 116,
+        "changed": 5
+      },
+      "message_count": 52,
+      "href": "e0c87bd6-2296-4d32-a3c5-dd1dd6ece790/index.html"
+    },
+    {
+      "session_id": "db4114ee-0bd5-4a3b-89e5-d1f8e5862474",
+      "title": "# Implement Plan Command\n\n## Purpose\n\nExecute a written implementation plan...",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-14T06:50:35.017Z",
+      "updated_at": "2026-02-14T07:58:11.901Z",
+      "usage": {
+        "input_tokens": 1202,
+        "output_tokens": 860,
+        "cache_read_tokens": 6097017,
+        "cache_creation_tokens": 221049
+      },
+      "diff_stats": {
+        "added": 963,
+        "removed": 227,
+        "changed": 9
+      },
+      "message_count": 66,
+      "href": "db4114ee-0bd5-4a3b-89e5-d1f8e5862474/index.html"
+    },
+    {
+      "session_id": "b5cd5765-caf1-4fdb-adf8-04a892abe4d3",
+      "title": "Style the header metadata like this image. Update terminal too . Figure out how...",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-14T06:06:02.508Z",
+      "updated_at": "2026-02-14T06:47:58.568Z",
+      "usage": {
+        "input_tokens": 105,
+        "output_tokens": 1100,
+        "cache_read_tokens": 8727320,
+        "cache_creation_tokens": 287505
+      },
+      "diff_stats": {
+        "added": 775,
+        "removed": 203,
+        "changed": 12
+      },
+      "message_count": 88,
+      "href": "b5cd5765-caf1-4fdb-adf8-04a892abe4d3/index.html"
+    },
+    {
+      "session_id": "7981d2e3-b678-4521-9c49-636cdd06e6a1",
+      "title": "Using session db215088-db9e-4c3d-b99b-40600bc02892 of this project figure out...",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-14T06:01:49.526Z",
+      "updated_at": "2026-02-14T06:49:33.425Z",
+      "usage": {
+        "input_tokens": 3349,
+        "output_tokens": 512,
+        "cache_read_tokens": 3789973,
+        "cache_creation_tokens": 150666
+      },
+      "diff_stats": {
+        "added": 931,
+        "removed": 29,
+        "changed": 2
+      },
+      "message_count": 46,
+      "href": "7981d2e3-b678-4521-9c49-636cdd06e6a1/index.html"
+    },
+    {
+      "session_id": "db215088-db9e-4c3d-b99b-40600bc02892",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-14T05:20:33.512Z",
+      "updated_at": "2026-02-14T05:58:35.261Z",
+      "usage": {
+        "input_tokens": 148,
+        "output_tokens": 25530,
+        "cache_read_tokens": 14236643,
+        "cache_creation_tokens": 215121
+      },
+      "diff_stats": {
+        "added": 1208,
+        "removed": 386,
+        "changed": 5
+      },
+      "message_count": 138,
+      "href": "db215088-db9e-4c3d-b99b-40600bc02892/index.html"
+    },
+    {
+      "session_id": "22b8651d-6d82-43c0-875f-48de4e180a60",
+      "title": "Create a readme and makefile",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-13T12:57:12.165Z",
+      "updated_at": "2026-02-13T13:12:42.719Z",
+      "usage": {
+        "input_tokens": 28,
+        "output_tokens": 217,
+        "cache_read_tokens": 817271,
+        "cache_creation_tokens": 26877
+      },
+      "diff_stats": {
+        "added": 137,
+        "changed": 2
+      },
+      "message_count": 24,
+      "href": "22b8651d-6d82-43c0-875f-48de4e180a60/index.html"
+    },
+    {
+      "session_id": "47909a05-ab2a-47b7-a40f-fbe765968c34",
+      "title": "Create a new --compact flag that truncates unnecessary tool outputs and...",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-13T12:15:22.75Z",
+      "updated_at": "2026-02-13T12:55:36.643Z",
+      "usage": {
+        "input_tokens": 1171,
+        "output_tokens": 1451,
+        "cache_read_tokens": 8181770,
+        "cache_creation_tokens": 113962
+      },
+      "diff_stats": {
+        "added": 886,
+        "removed": 39,
+        "changed": 10
+      },
+      "message_count": 98,
+      "href": "47909a05-ab2a-47b7-a40f-fbe765968c34/index.html"
+    },
+    {
+      "session_id": "92a446d7-1c2e-4280-9444-a16a2e7184b8",
+      "title": "Figure out integration for CLAUDE reader and html and terminal render",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-13T11:59:19.453Z",
+      "updated_at": "2026-02-13T12:35:26.588Z",
+      "usage": {
+        "input_tokens": 40,
+        "output_tokens": 375,
+        "cache_read_tokens": 1764392,
+        "cache_creation_tokens": 47607
+      },
+      "diff_stats": {
+        "added": 345,
+        "removed": 10,
+        "changed": 3
+      },
+      "message_count": 35,
+      "href": "92a446d7-1c2e-4280-9444-a16a2e7184b8/index.html"
+    },
+    {
+      "session_id": "44c3c1ed-65d1-4720-8259-a879facda572",
+      "title": "Figure out how to implement terminal  rendering \nI want a tree like view in...",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-13T09:56:16.872Z",
+      "updated_at": "2026-02-13T11:45:43.957Z",
+      "usage": {
+        "input_tokens": 33,
+        "output_tokens": 349,
+        "cache_read_tokens": 1467558,
+        "cache_creation_tokens": 108369
+      },
+      "diff_stats": {
+        "added": 744,
+        "changed": 6
+      },
+      "message_count": 27,
+      "href": "44c3c1ed-65d1-4720-8259-a879facda572/index.html"
+    },
+    {
+      "session_id": "0c559d7f-1823-4550-8823-6ad8cbacdbc5",
+      "title": "Figure out how to implement terminal  rendering \nI want a tree like view in...",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-13T09:45:07.347Z",
+      "updated_at": "2026-02-13T09:53:24.744Z",
+      "usage": {
+        "input_tokens": 15,
+        "output_tokens": 98,
+        "cache_read_tokens": 691352,
+        "cache_creation_tokens": 70995
+      },
+      "diff_stats": {
+        "added": 93,
+        "changed": 1
+      },
+      "message_count": 13,
+      "href": "0c559d7f-1823-4550-8823-6ad8cbacdbc5/index.html"
+    },
+    {
+      "session_id": "48b34919-3a1a-4aee-a47a-230a41f2c4c0",
+      "title": "Figure out how to implement html rendering",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-13T09:42:00.049Z",
+      "updated_at": "2026-02-13T12:05:15.451Z",
+      "usage": {
+        "input_tokens": 1558,
+        "output_tokens": 1629,
+        "cache_read_tokens": 13386646,
+        "cache_creation_tokens": 1049245
+      },
+      "diff_stats": {
+        "added": 2277,
+        "removed": 167,
+        "changed": 12
+      },
+      "message_count": 158,
+      "href": "48b34919-3a1a-4aee-a47a-230a41f2c4c0/index.html"
+    },
+    {
+      "session_id": "c012014b-0d3f-4aae-930f-8388d21f6dcc",
+      "title": "Figure out how to implement html rendering",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-13T09:42:00.049Z",
+      "updated_at": "2026-02-13T11:41:16.738Z",
+      "usage": {
+        "input_tokens": 757,
+        "output_tokens": 860,
+        "cache_read_tokens": 7070484,
+        "cache_creation_tokens": 260773
+      },
+      "diff_stats": {
+        "added": 2230,
+        "removed": 63,
+        "changed": 12
+      },
+      "message_count": 69,
+      "href": "c012014b-0d3f-4aae-930f-8388d21f6dcc/index.html"
+    },
+    {
+      "session_id": "efb68c7f-57c5-48ac-97ea-54b8aa64fc9a",
+      "title": "The spec missed secrets and pii redaction. How to architect a reusable layer...",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-12T13:00:56.943Z",
+      "updated_at": "2026-02-12T13:52:51.283Z",
+      "usage": {
+        "input_tokens": 81,
+        "output_tokens": 1236,
+        "cache_read_tokens": 5018298,
+        "cache_creation_tokens": 90665
+      },
+      "diff_stats": {
+        "added": 1144,
+        "removed": 99,
+        "changed": 9
+      },
+      "message_count": 74,
+      "href": "efb68c7f-57c5-48ac-97ea-54b8aa64fc9a/index.html"
+    },
+    {
+      "session_id": "376455e5-fc78-4f45-a237-e1e2053d4b1b",
+      "title": "Figure out how to implement @reader/claude/",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-12T12:55:10.535Z",
+      "updated_at": "2026-02-12T13:46:47.942Z",
+      "usage": {
+        "input_tokens": 53,
+        "output_tokens": 567,
+        "cache_read_tokens": 2750133,
+        "cache_creation_tokens": 93556
+      },
+      "diff_stats": {
+        "added": 1768,
+        "removed": 68,
+        "changed": 12
+      },
+      "message_count": 45,
+      "href": "376455e5-fc78-4f45-a237-e1e2053d4b1b/index.html"
+    },
+    {
+      "session_id": "c6171406-be91-4267-a4e6-6e09d415390d",
+      "title": "First bootstrap the project. Only structs and interfaces. Don’t implement",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-12T12:22:26.957Z",
+      "updated_at": "2026-02-12T12:52:35.236Z",
+      "usage": {
+        "input_tokens": 733,
+        "output_tokens": 789,
+        "cache_read_tokens": 2034399,
+        "cache_creation_tokens": 42127
+      },
+      "diff_stats": {
+        "added": 274,
+        "removed": 11,
+        "changed": 14
+      },
+      "message_count": 53,
+      "href": "c6171406-be91-4267-a4e6-6e09d415390d/index.html"
+    },
+    {
+      "session_id": "6faaec22-106f-41cc-9ffc-0bb039db198a",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-12T11:49:14.888Z",
+      "updated_at": "2026-02-12T12:14:59.899Z",
+      "usage": {
+        "input_tokens": 7262,
+        "output_tokens": 15314,
+        "cache_read_tokens": 6076938,
+        "cache_creation_tokens": 154087
+      },
+      "diff_stats": {
+        "added": 585,
+        "removed": 75,
+        "changed": 4
+      },
+      "message_count": 67,
+      "href": "6faaec22-106f-41cc-9ffc-0bb039db198a/index.html"
+    },
+    {
+      "session_id": "3cebf444-feef-448a-857b-364bdc9cdee8",
+      "title": "\u003cide_selection\u003eThe user selected the lines 82 to 94 from...",
+      "agent": "claude",
+      "author": "Ravi Atluri",
+      "model": "claude-opus-4-6",
+      "created_at": "2026-02-12T11:47:13.815Z",
+      "updated_at": "2026-02-12T11:52:19.177Z",
+      "usage": {
+        "input_tokens": 8,
+        "output_tokens": 32,
+        "cache_read_tokens": 86646,
+        "cache_creation_tokens": 30426
+      },
+      "diff_stats": {
+        "added": 14,
         "removed": 11,
         "changed": 1
       },
-      "message_count": 12,
-      "href": "2df198c7-c2fc-4724-91c1-cacb397d1f07/index.html"
+      "message_count": 6,
+      "href": "3cebf444-feef-448a-857b-364bdc9cdee8/index.html"
     }
   ]
 }
